--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/index.html
-/web2.html
-/calculator.js
-/chapters.js
-/studystatus.js
-/todo.js
-/cryptologin.js
+index.html
+web2.html
+calculator.js
+chapters.js
+studystatus.js
+todo.js
+cryptologin.js
